2002-07-12  Alexander Dupuy  <dupuy@sysdetect.com>

	* lib/b_error.c (be_error_time): fit timestamp in space provided
	(be_error_output): use shorter timestamps, limit program name size
	(be_error_append): use shorter timestamps, limit program name size

2002-07-08  Alexander Dupuy  <dupuy@sysdetect.com>

	* lib/b_crc.c: computation of CRC-32

2002-06-28  Alexander Dupuy  <dupuy@sysdetect.com>

	* lib/b_memx.c (bk_memx_lop): use memmove, as overlap may occur

2002-06-26  Alexander Dupuy  <dupuy@sysdetect.com>

	* lib/b_netinfo.c (bk_netinfo_from_socket): ERR->WARN for peer sockname

	* lib/b_addrgroup.c (tcp_connect_activity): don't gripe at shutdown
	(tcp_listen_activity): don't gripe at shutdown

2002-06-22  Seth Robertson  <seth@yeah.baka.org>

	* lib/b_addrgroup.c (tcp_connect_start): Allow zero timeout to
	mean no timeout, not immediate timeout.

2002-06-21  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_run.c (bk_run_run): Reset run_over flag during entry
	so that multiple run loop executions don't trash each other.

2002-06-19  Seth Robertson  <seth@yeah.baka.org>

	* lib/b_general.c (bk_general_destroy_insert): Copy-paste
	error--destroy functions were never called before.

2002-06-19  Alexander Dupuy  <dupuy@sysdetect.com>

	* include/libbk.h (bk_alloca_free): just a no-op
	(BK_ERROR_FLAG_SYSLOG_FULL, BRIEF, NO_FUN): error verbosity flags

	* lib/b_error.c (bk_error_init): set error flags in beinfo
	(bk_error_config): maybe set error flags in beinfo
	(bk_error_iprint): use level name instead of number, support BRIEF
	(bk_error_idump): pass through error flags
	(bk_error_istrdump): pass through error flags, avoid strdup
	(be_error_output): when syslogging, don't duplicate fun/level output,
	support BRIEF, NO_FUN
	(be_error_append): support BRIEF, NO_FUN

	* lib/b_general.c (bk_general_vsyslog): don't call alloca with constant
	[use array auto variable instead]; level format consistent w/bk_error_*