@@ -1,3 +1,9 @@
+2002-07-16  James Tanis  <jtt@saint.sysdetect.com>
+
+	* lib/b_string.c: Stupid bounds checking.
+
+	* lib/b_rand.c: Stupid bounds checking.
+
 2002-07-12  Alexander Dupuy  <dupuy@sysdetect.com>
 
 	* lib/b_error.c (be_error_time): fit timestamp in space provided
